<resources>
    <string name="app_name">Security</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_reset">Reset Password</string>
    <string name="prompt_email_username">Email / User Name</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_password">Re-Enter Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_name">Not a valid Name</string>
    <string name="invalid_email">Not a valid EMail</string>
    <string name="invalid_password">Password must be > 4 characters</string>
    <string name="invalid_password_mismatch">Password mismatch</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
</resources>
